fix eslintrc rules definition error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,11 +25,11 @@
       ],
       "react/react-in-jsx-scope": "off",
       "import/no-unresolved": "off",
-      "no-shadow": "off"
+      "no-shadow": "off",
+      "default-param-last": 0
     },
     "ignorePatterns": [
       "dist/",
       "build/"
-    ],
-    "default-param-last": 0
+    ]
   }
